<resources>
    <string name="app_name">WhatToCook</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUP">Sign UP</string>
    <string name="ImageDescription">Image</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Name">Name</string>
    <string name="Search">Search</string>
    <string name="Add">Add</string>
    <string name="Ok">Ok</string>
    <string name="Alert">Alert</string>
    <string name="Grams">Grams</string>
    <string name="Quantity">Quantity</string>
    <string name="Milliliters">Milliliters</string>
    <string name="LogOut">Log out</string>
    <string name="RecipeDescription">Recipe description</string>
    <string name="ChosenQuantity">chosen quantity</string>
    <string name="AddPhoto">Add photo</string>
    <string name="Products">Products</string>
    <string name="Appliances">Appliances</string>
    <string name="Description">Description</string>
    <string name="AddRecipe">Create recipe</string>
    <string name="MyProducts">My products</string>
    <string name="MyAppliances">My appliances</string>
    <string name="MyRecipes">My recipes</string>
    <string name="CreateProduct">Create product</string>
    <string name="AddProduct">Add product</string>
    <string name="AddAppliance">Add appliance</string>
    <string name="AlreadyAdded">Item is already added</string>
    <string name="CreateAppliance">Create appliance</string>
    <string name="ChangePicture">Change picture</string>
    <string name="MyAdditions">My additions</string>
    <string name="LeaveWarning">Press one more time to exit</string>
    <string name="NameTakenWarning">Product name taken</string>
    <string name="ApplianceNameTakenWarning">Appliance name taken</string>
    <string name="NoNameWarning">No name entered</string>
    <string name="NoMeasureWarning">No measure chosen</string>
    <string name="NoDescriptionWarning">No description entered</string>
    <string name="NoImageWarning">No image chosen</string>
    <string name="VoiceSearchError">Error using voice search</string>
    <string name="NoProductsWarning">No products chosen</string>
    <string name="NoAppliancesWarning">No appliances chosen</string>
    <string name="DeleteAlert">The item will be removed from the list</string>
    <string name="DeleteAlertPermanent">The item will be removed forever</string>
    <string name="CantDeleteWarning">Item is in use hence can not be deleted</string>
</resources>