<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonMyAppliances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/MyAppliances"
        app:layout_constraintBottom_toTopOf="@+id/buttonMyProducts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutFragmentHolder" />

    <Button
        android:id="@+id/buttonMyProducts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/MyProducts"
        app:layout_constraintBottom_toTopOf="@+id/buttonMyRecipes"
        app:layout_constraintEnd_toEndOf="@+id/buttonMyAppliances"
        app:layout_constraintStart_toStartOf="@+id/buttonMyAppliances"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@+id/buttonMyAppliances" />

    <Button
        android:id="@+id/buttonMyRecipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/MyRecipes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonMyProducts"
        app:layout_constraintStart_toStartOf="@+id/buttonMyProducts"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@+id/buttonMyProducts" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutFragmentHolder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMyAppliances"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>